--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
     "@line/bot-sdk": "^7.3.0",
-    "dotenv": "^10.0.0"
+    "axios": "^1.7.2",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1"
   }
 }
