--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "torch": "^0.2.7",
     "transformers": "^1.8.3"
   }
 }
