--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "dependencies": {
     "@line/bot-sdk": "^7.3.0",
+    "@huggingface/transformers": "^4.0.0",
     "axios": "^1.7.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "torch": "^0.2.7",
+    "torch": "^1.8.0",
     "transformers": "^3.1.0"
   }
 }
